Bug 156955 - FILEOPEN PPTX: multiline text with left aligned and right aligned mixed fails to render properly
Summary: FILEOPEN PPTX: multiline text with left aligned and right aligned mixed fails...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4 all versions
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Tab-Stops PPTX-Textbox
  Show dependency treegraph
 
Reported: 2023-08-27 23:51 UTC by Gerald Pfeifer
Modified: 2024-05-16 13:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.52 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-08-27 23:51 UTC, Gerald Pfeifer
Details
Visual comparison PowerPoint (left) vs Impress (right) (87.04 KB, image/png)
2023-08-27 23:52 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-08-27 23:51:59 UTC
Created attachment 189187 [details]
Sample slide (PPTX)

Comparing the sample document between PowerPoint and Impress the latter
 - left aligns all text (instead of right aligning some of it),
 - uses significantly more vertical space between lines/paragraphs.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e15bf7363adb20c77aee51e09b6f2604d741619b
CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
 
...and back to (at least) 6.4 all the way.
Comment 1 Gerald Pfeifer 2023-08-27 23:52:22 UTC
Created attachment 189188 [details]
Visual comparison PowerPoint (left) vs Impress (right)
Comment 2 Regina Henschel 2023-08-28 17:05:34 UTC
Problem is, that both the default and the actual tap positions specified by PowerPoint are larger than the text area width.

LibreOffice behaves unreasonable in such cases. It should use the right edge as tab stop in such cases. The problem is not a problem in the import filter, but you can see the same problem with a text box created in LibreOffice.
Comment 3 Regina Henschel 2023-08-28 17:08:42 UTC
Both paragraphs are left aligned. The text portions are right aligned by a right-align tab stop.
Comment 4 Commit Notification 2024-04-26 09:36:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d84c900bb78168dd9bd0fd1ea02c0769a5ba5f14

tdf#156955 Properly align text when tabstop is outside of textbox

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2024-04-28 10:29:06 UTC
Happy to confirm this fixes my original bug document. 

What a two liner can change sometimes! :-)


Are you planning to add a testcase?
Comment 6 Samuel Mehrbrodt 2024-04-29 06:54:51 UTC
(In reply to Gerald Pfeifer from comment #5)
> Happy to confirm this fixes my original bug document. 
> 
> What a two liner can change sometimes! :-)

Good, thanks for confirming!

> Are you planning to add a testcase?

Yes, that's why the bug is still open ;)
Comment 7 Commit Notification 2024-05-16 13:58:44 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/16da2bc87145f07f6f84fa69c76d461a31aea139

tdf#156955 Add test

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Samuel Mehrbrodt 2024-05-16 13:59:29 UTC
Test arrived, closing the bug now.
Comment 9 Samuel Mehrbrodt 2024-05-16 13:59:48 UTC
Verified as per comment 5.