tdf#156955 Properly align text when tabstop is outside of textbox

Co-authored-by: Tibor Nagy <tibor.nagy.extern@allotropia.de>

Change-Id: I9f7ead01d93e0701f8df30ad1dcfe24ef0af7067
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162113
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>